--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load humanize %}
+
 {% block breadcrumb %}
   <li class="breadcrumb-item active">Boards</li>
 {% endblock %}
@@ -29,11 +31,17 @@
           </td>
           <td class="align-middle">
             {% with post=board.get_last_post %}
-              <small>
-                <a href="{% url 'topic_posts' board.pk post.topic.pk %}">
-                  By {{ post.created_by.username }} at {{ post.created_at }}
-                </a>
-              </small>
+              {% if post %}
+                <small>
+                  <a href="{% url 'topic_posts' board.pk post.topic.pk %}">
+                    By {{ post.created_by.username }} {{ post.created_at|naturaltime }}
+                  </a>
+                </small>
+              {% else %}
+                <small class="text-muted">
+                  <em>No posts yet.</em>
+                </small>
+              {% endif %}
             {% endwith %}
           </td>
         </tr>
