--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}Django Boards{% endblock %}</title>
+    <title>{% block title %}Django Forum | Discussions{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
@@ -12,11 +12,25 @@
     {% block body %}  <!-- HERE -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Exploration Forum</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="mainMenu">
+        <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://www.linkedin.com/in/boazkipro03/" target="_blank" rel="noopener">LinkedIn</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://twitter.com/boazKT" target="_blank" rel="noopener">Twitter</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://github.com/boazkipro/forum-django" target="_blank" rel="noopener">GitHub</a>
+              </li>
+            </ul>
       {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
           <li class="nav-item dropdown">
@@ -24,8 +38,8 @@
               {{ user.username }}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-              <a class="dropdown-item" href="#">My account</a>
-              <a class="dropdown-item" href="#">Change password</a>
+              <a class="dropdown-item" href="{% url 'my_account' %}">My account</a>
+              <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
             </div>
